chore: Update PWABadge.css and VitePWA configuration

--- a/src/PWABadge.css
+++ b/src/PWABadge.css
@@ -19,7 +19,7 @@
 }
 .PWABadge-toast-message {
     margin-bottom: 8px;
-    color: black;
+    color: #0000;
 }
 .PWABadge-toast-button {
     border: 1px solid #8885;
